# efoy-modbus-config

./: .coverage  .env  .env.example  .env.simulator  .gitignore  README.md  inspect_pdf.py  main.py  pyproject.toml
examples/: EXAMPLES.md
examples/01_minimalmodbus/: main.py  pyproject.toml
examples/02_codegen_jinja2/: efoy_registers.py  main.py  pyproject.toml  templates.py  test_stubs.py
examples/03_mqtt_polling_plan/: main.py  pyproject.toml
examples/04_advantech_csv/: main.py  mapping.csv.jinja2  pyproject.toml
examples/05_generic_client_cli/: main.py  pyproject.toml
examples/06_telegraf_input_plugin/: config.example.conf  devices.yaml  docker-compose.yml  main.py  pyproject.toml  telegraf.conf  telegraf.conf.jinja2
src/efoy_modbus/: __init__.py  _cli.py  config.py  downloader.py  extractor.py  models.py  normalizer.py  registry.py
src/efoy_modbus/schemas/: __init__.py  v0.json  v1.json  v10.json  v2.json  v20.json  v30.json
