[project]
name = "efoy-modbus-config"
version = "1.0.0"
description = "Versioned Modbus TCP register specification for EFOY fuel cells"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["modbus", "efoy", "fuel-cell", "iot", "automation", "modbus-tcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
# Core dependency only — consumers don't need PDF extraction tools
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# PDF generation pipeline — required for efoy-generate / main.py
generate = [
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
efoy-generate = "efoy_modbus._cli:main"

[project.urls]
Homepage = "https://github.com/your-org/efoy-modbus-config"
Source = "https://github.com/your-org/efoy-modbus-config"
"Issue Tracker" = "https://github.com/your-org/efoy-modbus-config/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/efoy_modbus"]
# Include JSON schema files even if they are not yet git-tracked
artifacts = ["src/efoy_modbus/schemas/*.json"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]

