[project]
name = "example-01-minimalmodbus"
version = "0.1.0"
description = "Read EFOY registers by name with MinimalModbus"
requires-python = ">=3.8"
dependencies = [
    "modbus-config",
    "modbus-schema-common",
    "minimalmodbus>=2.1.1",
]

[tool.uv.sources]
modbus-config = { path = "../../packages/modbus-config", editable = true }
modbus-schema-common = { path = "../../packages/modbus-schema-common", editable = true }
