[project]
name = "example-02-codegen-jinja2"
version = "0.1.0"
description = "Generate typed MinimalModbus getter functions from the EFOY schema"
requires-python = ">=3.11"
dependencies = [
    "efoy-modbus-config",
    "jinja2>=3.1.0",
]

[tool.uv.sources]
efoy-modbus-config = { path = "../..", editable = true }
