[project]
name = "example-02-codegen-jinja2"
version = "0.1.0"
description = "Generate typed MinimalModbus getter functions from the EFOY schema"
requires-python = ">=3.11"
dependencies = [
    "modbus-config",
    "modbus-schema-common",
    "jinja2>=3.1.0",
    "pymodbus>=3.13.1",
    "minimalmodbus>=2.1.1",
]

[tool.uv.sources]
modbus-config = { path = "../../packages/modbus-config", editable = true }
modbus-schema-common = { path = "../../packages/modbus-schema-common", editable = true }
