[project]
name = "example-03-mqtt-polling-plan"
version = "0.1.0"
description = "Build a Modbus→MQTT polling plan from the EFOY schema"
requires-python = ">=3.11"
dependencies = [
    "modbus-config",
    "modbus-schema-common",
]

[tool.uv.sources]
modbus-config = { path = "../../packages/modbus-config", editable = true }
modbus-schema-common = { path = "../../packages/modbus-schema-common", editable = true }
