[project]
name = "example-04-advantech-csv"
version = "0.1.0"
description = "Generate Advantech Modbus-to-MQTT CSV config from the EFOY schema"
requires-python = ">=3.11"
dependencies = [
    "efoy-modbus-config",
    "jinja2>=3.1.0",
]

[tool.uv.sources]
efoy-modbus-config = { path = "../..", editable = true }
