[project]
name = "example-04-advantech-csv"
version = "0.1.0"
description = "Generate Advantech Modbus-to-MQTT CSV config from the EFOY schema"
requires-python = ">=3.11"
dependencies = [
    "modbus-config",
    "modbus-schema-common",
    "jinja2>=3.1.0",
]

[tool.uv.sources]
modbus-config = { path = "../../packages/modbus-config", editable = true }
modbus-schema-common = { path = "../../packages/modbus-schema-common", editable = true }
