[project]
name = "example-05-generic-client-cli"
version = "0.1.0"
description = "A simplified, generic Modbus TCP client and CLI built against the registry schema interface"
requires-python = ">=3.11"
dependencies = [
    "modbus-config",
    "modbus-schema-common",
    "pymodbus>=3.8.0",
    "typer>=0.12.0",
]

[tool.uv.sources]
modbus-config = { path = "../../packages/modbus-config", editable = true }
modbus-schema-common = { path = "../../packages/modbus-schema-common", editable = true }
